# Personal-Care-Utility-MVP-

./: .gitignore  README.md  pyproject.toml
archive/: README.md
data/: README.md
data/sample_synthetic/: README.md
data_pipeline/: README.md  met_day_match_dtw.py  warp_loneliness_to_cg.py
data_pipeline/scripts/: detect_cgm_events.py
docs/: architecture.md  data-governance.md  synthetic-data.md
docs/demo/: README.md
docs/demo/playback/: PCU_MVP_Demo_Documentation.md  PCU_MVP_Demo_Report.tex  SYNTHETIC_DATASET_INTRODUCTION.md
docs/design/: demo-content-design.md  product-mvp-design.md
docs/references/: README.md
mvp/: AGENT_RUNTIME_DESIGN.md  PCU_MVP_RECONSTRUCTION.md  README.md
mvp/backend/: pcu_pipeline.py  server.py
mvp/backend/knowledge/: diabetes_guidelines.json
mvp/scripts/: augment_participant_week.py  build_log.py
mvp/ui/: app.js  index.html  styles.css
